--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,25 @@
 * {
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
+    margin: 0;
 }
+
 
 .container {
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     background-image: linear-gradient(to bottom, rgb(253, 230, 97), rgb(172, 77, 106));
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    padding: 5rem;
+    height: 100vh;
 }
 
 h1 {
     color: white;
+}
+
+h4 {
+    margin: 1.5rem 0 0.5rem 0;
 }
 
 .content__box {
@@ -29,6 +31,7 @@ h1 {
     padding: 20px 20px;
     width: 400px;
     border-radius: 5px;
+    margin-top: 3rem;
 }
 
 .date {
@@ -36,7 +39,7 @@ h1 {
     line-height: 2.25rem;
     font-size: 1.25rem;
     font-weight: 600;
-    width: 50%;
+    width: 40%;
 }
 
 .todo__input {
@@ -68,6 +71,7 @@ h1 {
     border: none;
     padding: 5px 20px;
     flex-grow: .15;
+    cursor: pointer;
 }
 
 .add__item:focus {
@@ -84,16 +88,11 @@ h1 {
 }
 
 .pending__content {
-    display: none;
-}
-
-.pending__content--visible{
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
 }
 
-.pending__item {
+.pending__content .pending__item {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -102,6 +101,14 @@ h1 {
     justify-content: space-between;
     margin-top: 1rem;
     height: 2.5rem;
+    position: relative;
+    animation-name: swim;
+    animation-duration: .75s;
+}
+
+@keyframes swim {
+    0%   {left:50px; top:0px;}
+    100%  {left:0px; top:0px;}
 }
 
 .pending__check, .completed__check {
@@ -112,14 +119,27 @@ width: 35px;
     flex-grow: 1;
 }
 
-.delete__item {
+.pending__item .delete__item {
+    display: none;
+}
+
+.pending__item:hover .delete__item {
+    display: inline-block;
     height: 2.5rem;
-    width: 2.5rem;
+    width: 3rem;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     border: none;
     background-color: rgb(241, 45, 45);
-    visibility: hidden;
+    cursor: pointer;
+    position: relative;
+    animation-name: trash;
+    animation-duration: .5s;
+}
+
+@keyframes trash {
+    0%   {width:1.5rem;}
+    100%  {width:3rem;}
 }
 
 .fa.fa-trash {
@@ -127,13 +147,18 @@ width: 35px;
     font-size: 1.1rem;
 }
 
+
 .completed__content {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
 }
 
-.completed__item--visible {
+.hide {
+    display: none;
+}
+
+.completed__content .pending__item {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -142,13 +167,6 @@ width: 35px;
     justify-content: space-between;
     margin-top: 1rem;
     height: 2.5rem;
-}
-
-.completed__item {
-    display: none;
-}
-
-.completed__text {
     text-decoration: line-through;
     color: rgb(121, 121, 121);
 }
@@ -165,7 +183,8 @@ width: 35px;
     border: none;
     font-size: 1rem;
     font-weight: 600;
-    background-color: rgb(224, 224, 224);
+    background-color: transparent;
     padding: 10px;
     border-radius: 5px;
+    cursor: pointer;
 }
